--- a/index.html
+++ b/index.html
@@ -32,70 +32,70 @@
                 <div class="screen__content">
                     <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
                     <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
-                    <input type="text" placeholder="Код..." data-key="2323" data-to="question-2">
+                    <input type="number" placeholder="Код..." data-key="2323" data-to="question-2">
                 </div>
             </div>
             <div class="screen screen_absolute screen_bg_2 screen_question" id="question-2">
                 <div class="screen__content">
                     <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
                     <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
-                    <input type="text" placeholder="Код..." data-key="4443" data-to="question-3">
+                    <input type="number" placeholder="Код..." data-key="4443" data-to="question-3">
                 </div>
             </div>
             <div class="screen screen_absolute screen_bg_3 screen_question" id="question-3">
                 <div class="screen__content">
                     <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
                     <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
-                    <input type="text" placeholder="Код..." data-key="2323" data-to="question-4">
+                    <input type="number" placeholder="Код..." data-key="2323" data-to="question-4">
                 </div>
             </div>
             <div class="screen screen_absolute screen_bg_4 screen_question" id="question-4">
                 <div class="screen__content">
                     <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
                     <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
-                    <input type="text" placeholder="Код..." data-key="2323" data-to="question-5">
+                    <input type="number" placeholder="Код..." data-key="2323" data-to="question-5">
                 </div>
             </div>
             <div class="screen screen_absolute screen_bg_3 screen_question" id="question-5">
                 <div class="screen__content">
                     <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
                     <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
-                    <input type="text" placeholder="Код..." data-key="2323" data-to="question-6">
+                    <input type="number" placeholder="Код..." data-key="2323" data-to="question-6">
                 </div>
             </div>
             <div class="screen screen_absolute screen_bg_3 screen_question" id="question-6">
                 <div class="screen__content">
                     <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
                     <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
-                    <input type="text" placeholder="Код..." data-key="2323" data-to="question-7">
+                    <input type="number" placeholder="Код..." data-key="2323" data-to="question-7">
                 </div>
             </div>
             <div class="screen screen_absolute screen_bg_3 screen_question" id="question-7">
                 <div class="screen__content">
                     <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
                     <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
-                    <input type="text" placeholder="Код..." data-key="2323" data-to="question-8">
+                    <input type="number" placeholder="Код..." data-key="2323" data-to="question-8">
                 </div>
             </div>
             <div class="screen screen_absolute screen_bg_3 screen_question" id="question-8">
                 <div class="screen__content">
                     <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
                     <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
-                    <input type="text" placeholder="Код..." data-key="2323" data-to="question-9">
+                    <input type="number" placeholder="Код..." data-key="2323" data-to="question-9">
                 </div>
             </div>
             <div class="screen screen_absolute screen_bg_3 screen_question" id="question-9">
                 <div class="screen__content">
                     <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
                     <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
-                    <input type="text" placeholder="Код..." data-key="2323" data-to="question-10">
+                    <input type="number" placeholder="Код..." data-key="2323" data-to="question-10">
                 </div>
             </div>
             <div class="screen screen_absolute screen_bg_3 screen_question" id="question-10">
                 <div class="screen__content">
                     <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
                     <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
-                    <input type="text" placeholder="Код..." data-key="2323" data-to="question-11">
+                    <input type="number" placeholder="Код..." data-key="2323" data-to="question-11">
                 </div>
             </div>
             <div class="screen screen_absolute screen_question screen_prize" id="question-11">
