--- a/index.html
+++ b/index.html
@@ -30,47 +30,56 @@
             </div>
             <div class="screen screen_absolute screen_question screen_bg_1 screen_question" id="question-1">
                 <div class="screen__content">
-                    <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
-                    <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
+                    <div class="screen__title center">Первые кода найдешь у дурака...</div>
                     <input type="number" placeholder="Код..." data-key="2323" data-to="question-2">
                 </div>
             </div>
             <div class="screen screen_absolute screen_bg_2 screen_question" id="question-2">
                 <div class="screen__content">
-                    <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
-                    <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
-                    <input type="number" placeholder="Код..." data-key="4443" data-to="question-3">
+                    <div class="screen__title center">Название этого бренда ???</div>
+                    <div class="screen__images">
+                        <img class="screen__emmo" src="./auto.png" alt="">&nbsp;
+                        <img class="screen__emmo" src="./plus.png" alt="">&nbsp;
+                        <img class="screen__emmo" src="./circle.png" alt="">
+                        <img class="screen__emmo" src="./circle.png" alt="">
+                        <img class="screen__emmo" src="./circle.png" alt="">
+                        <img class="screen__emmo" src="./circle.png" alt="">
+                    </div>
+                    <input type="text" placeholder="Ответ..." data-key="2323" data-to="question-3">
                 </div>
             </div>
             <div class="screen screen_absolute screen_bg_3 screen_question" id="question-3">
                 <div class="screen__content">
-                    <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
-                    <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
+                    <div class="screen__title center">Пойди туда - не знаю куда...</div>
                     <input type="number" placeholder="Код..." data-key="2323" data-to="question-4">
                 </div>
             </div>
             <div class="screen screen_absolute screen_bg_4 screen_question" id="question-4">
                 <div class="screen__content">
-                    <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
+                    <div class="screen__title center">Может попьем чайку ?</div>
                     <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
                     <input type="number" placeholder="Код..." data-key="2323" data-to="question-5">
                 </div>
             </div>
-            <div class="screen screen_absolute screen_bg_3 screen_question" id="question-5">
+            <div class="screen screen_absolute screen_bg_5 screen_question" id="question-5">
                 <div class="screen__content">
-                    <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
+                    <div class="screen__title center">Черный, а не уголь.<br>
+                        Сладкий, а не сахар.<br>
+                        Тает, а не снег.</div>
                     <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
                     <input type="number" placeholder="Код..." data-key="2323" data-to="question-6">
                 </div>
             </div>
-            <div class="screen screen_absolute screen_bg_3 screen_question" id="question-6">
+            <div class="screen screen_absolute screen_bg_6 screen_question" id="question-6">
                 <div class="screen__content">
-                    <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
-                    <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
+                    <div class="screen__title center">Слова из фильма...</div>
+                    <img style="width: 230px;" class="screen__emmo" id="audio-play" src="./museum.png" alt="">
+                    <audio src="./audio.mp3"></audio>
                     <input type="number" placeholder="Код..." data-key="2323" data-to="question-7">
+
                 </div>
             </div>
-            <div class="screen screen_absolute screen_bg_3 screen_question" id="question-7">
+            <div class="screen screen_absolute screen_bg_2 screen_question" id="question-7">
                 <div class="screen__content">
                     <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
                     <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
@@ -84,14 +93,14 @@
                     <input type="number" placeholder="Код..." data-key="2323" data-to="question-9">
                 </div>
             </div>
-            <div class="screen screen_absolute screen_bg_3 screen_question" id="question-9">
+            <div class="screen screen_absolute screen_bg_4 screen_question" id="question-9">
                 <div class="screen__content">
                     <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
                     <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
                     <input type="number" placeholder="Код..." data-key="2323" data-to="question-10">
                 </div>
             </div>
-            <div class="screen screen_absolute screen_bg_3 screen_question" id="question-10">
+            <div class="screen screen_absolute screen_bg_5 screen_question" id="question-10">
                 <div class="screen__content">
                     <div class="screen__title center">Lorem ipsum dolor sit. ?</div>
                     <!-- <img class="screen__emmo" src="./emo-1.png" alt=""> -->
@@ -101,36 +110,36 @@
             <div class="screen screen_absolute screen_question screen_prize" id="question-11">
                <div class="prize">
                    <div class="prize__preview">
-                    <img class="prize__icon" src="./prize.png" alt="">
+                    <img class="prize__icon animate__bounce" src="./prize.png" alt="">
                        <div class="prize__input">
-                            <input type="number" placeholder="Код 1" data-type="prize">
+                            <input type="number" placeholder="Код..." data-type="prize">
                        </div>
                    </div>
                    <div class="prize__content"></div>
                </div>
                <div class="prize">
                     <div class="prize__preview">
-                        <img  class="prize__icon" src="./prize.png" alt="">
+                        <img  class="prize__icon animate__bounce-2" src="./prize.png" alt="">
                         <div class="prize__input">
-                            <input type="number" placeholder="Код 3" data-type="prize">
+                            <input type="number" placeholder="Код..." data-type="prize">
                         </div>
                     </div>
                     <div class="prize__content"></div>
                </div>
                <div class="prize">
                     <div class="prize__preview">
-                        <img class="prize__icon" src="./prize.png" alt="">
+                        <img class="prize__icon animate__bounce-1" src="./prize.png" alt="">
                         <div class="prize__input">
-                            <input type="number" placeholder="Код 2" data-type="prize">
+                            <input type="number" placeholder="Код..." data-type="prize">
                         </div>
                     </div>
                     <div class="prize__content"></div>
                </div>
                <div class="prize">
                     <div class="prize__preview">
-                        <img class="prize__icon" src="./prize.png" alt="">
+                        <img class="prize__icon animate__bounce-3" src="./prize.png" alt="">
                         <div class="prize__input">
-                            <input type="number" placeholder="Код 4" data-type="prize">
+                            <input type="number" placeholder="Код..." data-type="prize">
                         </div>
                     </div>
                     <div class="prize__content"></div>
@@ -142,6 +151,7 @@
     <script>
         var textWrapper = document.querySelector('.text-animate');
         var posTouch = null;
+        var audio = document.querySelector('audio');
         var mapPrizes = {
             '236589': {
                 type: 'pandora',
@@ -150,7 +160,7 @@
             },
             '864599': {
                 type: 'sea', 
-                title: '4 ночи на берегу моря'
+                title: '5 ночей на берегу моря'
             },
             '446578': {
                 type: 'tatu',
@@ -206,8 +216,17 @@
         document.querySelector('.screen').addEventListener('touchmove', (e) => {
            document.querySelector('.screen_question').style.left = 0;
         })
+
         document.querySelector('[data-to]').addEventListener('click', (e) => {
            document.querySelector(`#${e.target.dataset.to}`).style.left = 0;
+        })
+
+        document.querySelector('#audio-play').addEventListener('touchend', () => {
+           if (audio.paused) {
+                audio.play()
+           } else {
+               audio.pause()
+           }
         })
 
         function renderPrize(data) {
