--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="screen__title center">Слова из фильма...</div>
                     <img style="width: 230px;" class="screen__emmo" id="audio-play" src="./museum.png" alt="">
                     <audio src="./audio.mp3"></audio>
-                    <input type="number" placeholder="Код..." data-key="2323" data-to="question-7">
+                    <input type="number" placeholder="Ответ..." data-key="2323" data-to="question-7">
 
                 </div>
             </div>
