--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <img class="screen__emmo" src="./circle.png" alt="">
                         <img class="screen__emmo" src="./circle.png" alt="">
                     </div>
-                    <input type="text" style="width: 250px;" placeholder="Код..." data-key="4465" data-to="question-3">
+                    <input type="number" style="width: 250px;" placeholder="Код..." data-key="4465" data-to="question-3">
                 </div>
             </div>
             <div class="screen screen_absolute screen_bg_3 screen_question" id="question-3">
